--- a/Budfirmex/src/app/buildings/components/equipment-daily-reports/equipment-daily-reports.component.html
+++ b/Budfirmex/src/app/buildings/components/equipment-daily-reports/equipment-daily-reports.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-<button type="button" class="btn btn-warning float-end"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+<button type="button" class="btn btn-warning float-end" (click)="createEquipmentDailyReport()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
         fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
         <path
             d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
@@ -18,9 +18,10 @@
             </thead>
             <tbody>
                 <tr *ngFor="let equipmentDailyReport of equipmentDailyReports">
-                    <!-- <td>{{dailyReports.reportNumber}}</td>
-                    <td>{{dailyReports.drafted}}</td>
-                    <td></td> -->
+                    <td>{{equipmentDailyReport.reportNumber}}</td>
+                    <td>{{equipmentDailyReport.author.firstName + ' ' + equipmentDailyReport.author.lastName}}</td>
+                    <td><a
+                      [routerLink]="['/buildings/' + buildingDailyReport.building.id + '/daily-report/' + buildingDailyReport.id + '/machines-report/' + equipmentDailyReport.id]">Edit</a></td>
                 </tr>
             </tbody>
         </table>
