--- a/Budfirmex/src/app/buildings/modals/comments/comment-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/comments/comment-modal.component.html
@@ -19,7 +19,7 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button type="submit" class="btn btn-outline-dark" [disabled]="form.invalid" (click)="modal.close('Save click')">Zapisz</button>
+    <button type="submit" class="btn btn-outline-dark" [disabled]="form.invalid" (click)="createComment()">Zapisz</button>
   </div>
 </ng-template>
 
