--- a/Budfirmex/src/app/buildings/modals/used-machine/used-machine-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/used-machine/used-machine-modal.component.html
@@ -1,7 +1,8 @@
 <ng-template #content let-modal>
   <div class="modal-header">
     <div class="modal-title" id="modal-basic-title">
-      <h4>Dodaj maszynę</h4>
+      <h4 *ngIf="!usedEquipment">Dodaj maszynę</h4>
+      <h4 *ngIf="usedEquipment">Edytuj maszynę</h4>
       <h5>Podaj informacje o pracującej maszynie, jej operatorze i zakresie wykonanych prac.</h5>
     </div>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
@@ -75,7 +76,7 @@
       </ng-container>
       <div class="form-group">
         <label for="daily_task">Operator</label>
-        <select id="operator" class="form-control">
+        <select id="daily_task" class="form-control">
           <option></option>
         </select>
       </div>
@@ -91,12 +92,14 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button type="submit" class="btn btn-outline-dark" [disabled]="form.invalid" (click)="modal.close('Save click')">Zapisz</button>
+    <button *ngIf="!usedEquipment" type="submit" class="btn btn-outline-dark" [disabled]="form.invalid" (click)="createUsedMachine()">Zapisz</button>
+    <button *ngIf="usedEquipment" type="submit" class="btn btn-outline-dark" [disabled]="form.invalid" (click)="updateUsedMachine()">Modyfikuj</button>
   </div>
 </ng-template>
 
 
-<button type="button" class="btn btn-warning float-end" (click)="open(content)"><svg xmlns="http://www.w3.org/2000/svg"
+<button *ngIf="usedEquipment">Edytuj</button>
+<button *ngIf="!usedEquipment" type="button" class="btn btn-warning float-end" (click)="open(content)"><svg xmlns="http://www.w3.org/2000/svg"
     width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
     <path
       d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
