add modules salaries, costs, add button to building personnel component

--- a/Budfirmex/src/app/buildings/components/building-personnel/building-personnel.component.html
+++ b/Budfirmex/src/app/buildings/components/building-personnel/building-personnel.component.html
@@ -26,4 +26,8 @@
       </div>
     </div>
   </div>
+  <br><p class="box-title">Koszty budowy</p>
+  <button class="button__primary" mat-raised-button>
+    Pokaż koszty budowy
+  </button>
 </div>
