--- a/Budfirmex/src/app/costs/components/construction-costs/construction-costs.component.html
+++ b/Budfirmex/src/app/costs/components/construction-costs/construction-costs.component.html
@@ -1,26 +1,21 @@
 <div class="container-fluid">
-    <h2 class="salary-title">Pensje pracowników</h2>
-    <button class="button__primary" (click)="openSelectWorkersModal()">Oblicz pensję pracowników</button>
+    <h2 class="cost-title">Koszty budowy</h2>
     <div class="white-background table-margin">
         <table>
             <thead>
                 <tr>
                     <td>Lp.</td>
-                    <td>Imię i nazwisko</td>
                     <td>Miesiąc</td>
                     <td>Rok</td>
-                    <td>Podstawa pensji</td>
-                    <td>Nadgodziny</td>
-                    <td>Godziny nocne</td>
-                    <td>Warunki szkodliwe</td>
-                    <td>Brygadzista</td>
-                    <td>Pensja brutto</td>
+                    <td>Koszty pracowników</td>
+                    <td>Koszty sprzętu</td>
+                    <td>Koszty materiałów</td>
+                    <td>Koszty miesięczne</td>
+                    <td>Koszt całkowity</td>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
