--- a/Budfirmex/src/app/dashboard/components/my-buildings/my-buildings.component.html
+++ b/Budfirmex/src/app/dashboard/components/my-buildings/my-buildings.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <h2 class="my-buildings-title">Moje budowy</h2>
   <button class="button__primary" [routerLink]="['/salaries']" mat-raised-button>
-    Oblicz pensję robotnikom
+    Oblicz pensję
   </button>
   <button class="button__primary" [disabled]="isSupervisor" (click)="openAddNewBuildingModal()" mat-raised-button>
     Dodaj nową budowę
