--- a/Budfirmex/src/app/dashboard/pages/dashboard/dashboard.component.html
+++ b/Budfirmex/src/app/dashboard/pages/dashboard/dashboard.component.html
@@ -8,6 +8,5 @@
   [isSupervisor]="isSupervisor()"
   [activeBuildings]="activeBuildings"
   [finishedBuildings]="finishedBuildings"
-  (refreshBuildings)="onRefreshBuildings()"
->
+  (refreshBuildings)="onRefreshBuildings()">
 </app-my-buildings>
