change of validation messages

--- a/Budfirmex/src/app/buildings/modals/materials-used/materials-used-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/materials-used/materials-used-modal.component.html
@@ -29,7 +29,7 @@
       </div>
       <ng-container *ngIf="quantity.invalid && quantity.touched">
         <div class="alert alert-danger" role="alert" *ngIf="quantity.errors.required">
-          Pole jest wymagane
+          Ilość jest wymagana. Podaj ilość.
         </div>
       </ng-container>
     </form>
