--- a/Budfirmex/src/app/buildings/modals/done-work/done-work-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/done-work/done-work-modal.component.html
@@ -24,13 +24,13 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="harmful_hours">Ilość</label>
-        <input type="text" id="harmful_hours" name="harmful_hours" class="form-control" required
-          [(ngModel)]="model.harmful_hours" #harmful_hours="ngModel">
+        <label for="quantity">Ilość</label>
+        <input type="text" id="quantity" name="quantity" class="form-control" required
+          [(ngModel)]="model.quantity" #quantity="ngModel">
       </div>
-      <ng-container *ngIf="harmful_hours.invalid && harmful_hours.touched">
-        <div class="alert alert-danger" role="alert" *ngIf="harmful_hours.errors.required">
-          Pole jest wymagane
+      <ng-container *ngIf="quantity.invalid && quantity.touched">
+        <div class="alert alert-danger" role="alert" *ngIf="quantity.errors.required">
+          Ilość jest wymagana. Podaj ilość.
         </div>
       </ng-container>
       <div class="form-group">
@@ -40,7 +40,7 @@
       </div>
       <ng-container *ngIf="standard.invalid && standard.touched">
         <div class="alert alert-danger" role="alert" *ngIf="standard.errors.required">
-          Pole jest wymagane
+          Norma czasu pracy jest wymagana. Wpisz normę.
         </div>
       </ng-container>
       <div class="form-group">
