fixes after merging with API

--- a/Budfirmex/src/app/buildings/components/brigade-reports/brigade-reports.component.html
+++ b/Budfirmex/src/app/buildings/components/brigade-reports/brigade-reports.component.html
@@ -19,10 +19,10 @@
         </thead>
         <tbody>
         <tr *ngFor="let brigadeDailyReport of brigadeDailyReports">
-          <td>{{brigadeDailyReport.reportNumber}}</td>
-          <td>{{brigadeDailyReport.author.firstName + ' ' + brigadeDailyReport.author.lastName}}</td>
+          <td>{{brigadeDailyReport?.reportNumber}}</td>
+          <td>{{brigadeDailyReport?.author?.firstName + ' ' + brigadeDailyReport?.author?.lastName}}</td>
           <td><a
-            [routerLink]="['/buildings/' + brigadeDailyReport.buildingDailyReport.building.id + '/daily-report/' + brigadeDailyReport.buildingDailyReport.id + '/brigade-report/' + brigadeDailyReport.id]">Edit</a>
+            [routerLink]="['/buildings/' + brigadeDailyReport?.buildingDailyReport?.building.id + '/daily-report/' + brigadeDailyReport?.buildingDailyReport?.id + '/brigade-report/' + brigadeDailyReport.id]">Edit</a>
           </td>
         </tr>
         </tbody>
