--- a/Budfirmex/src/app/buildings/pages/building/building.component.html
+++ b/Budfirmex/src/app/buildings/pages/building/building.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="col-8 pt-4 pb-4">
       <button (click)="createDailyReport()">+ Raport dzienny</button>
-      <app-daily-reports [reports]="dailyReports"></app-daily-reports>
+      <app-daily-reports *ngIf="dailyReports" [reports]="dailyReports"></app-daily-reports>
     </div>
   </div>
 </div>
