--- a/Budfirmex/src/app/buildings/components/building-personnel/building-personnel.component.html
+++ b/Budfirmex/src/app/buildings/components/building-personnel/building-personnel.component.html
@@ -7,7 +7,7 @@
     <div class="col-md-8">
       <div class="general-value">
         <ul>
-          <li>{{ supervisor }}</li>
+          <li>{{ supervisor?.firstName + ' ' + supervisor?.lastName }}</li>
         </ul>
       </div>
     </div>
