--- a/Budfirmex/src/app/buildings/components/daily-reports/daily-reports.component.html
+++ b/Budfirmex/src/app/buildings/components/daily-reports/daily-reports.component.html
@@ -2,7 +2,7 @@
   <p class="box-title">Raporty dzienne</p>
   <div class="row">
     <div class="col-md-12">
-      <full-calendar [options]="calendarOptions"></full-calendar>
+      <full-calendar *ngIf="calendarOptions" [options]="calendarOptions"></full-calendar>
     </div>
   </div>
 </div>
