--- a/Budfirmex/src/app/dashboard/components/user-details/user-details.component.html
+++ b/Budfirmex/src/app/dashboard/components/user-details/user-details.component.html
@@ -3,12 +3,12 @@
     <div class="row">
       <div class="col-md-6">
         <div class="user-details__label">Inżynier budowy</div>
-        <div class="user-details__value">{{ user.firstName + ' ' + user.lastName }}</div>
+        <div class="user-details__value">{{ user?.firstName + ' ' + user?.lastName }}</div>
       </div>
       <div class="col-md-2">
         <ng-container *ngIf="isSupervisor">
           <div class="user-details__label--small">Numer uprawnień</div>
-          <div class="user-details__value--small">{{ user.permissionNumber }}</div>
+          <div class="user-details__value--small">{{ user?.permissionNumber }}</div>
         </ng-container>
       </div>
       <div class="col-md-2">
